# GateKeeper

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE.md  README.md  assets.yml  game.cpp  metadata.yml
.github/workflows/: build.yml
assets/: castle.tmx  castle_combat.tmx  characters_encrypted  desert.tmx  desert_combat.tmx  dungeon.tmx  dungeon.tsx  dungeon_combat.tmx  exterior.tmx  exterior.tsx  grassland.tmx  grassland_combat.tmx  interior.tmx  interior.tsx  map.tmx  player_attack_encrypted  snowland.tmx  snowland_combat.tmx  spritesheet.tsx  spritesheet_encrypted  tower.tmx  tower_combat.tmx  volcano.tmx  volcano_combat.tmx  water_dungeon.tmx  water_dungeon_combat.tmx  winter.tmx  winter.tsx
assets/encrypted/: README.md
scripts/: asset_helper.py  build-pico.sh  build-stm32.sh  build.sh  decrypt-assets.sh  encrypt-assets.sh  install.sh
src/: .env.example  building.hpp  camera.cpp  camera.hpp  flags.hpp  game.cpp  game.hpp  game_scene.cpp  game_scene.hpp  interior_connector.cpp  interior_connector.hpp  map.cpp  map.hpp  menu_scene.cpp  menu_scene.hpp  player.cpp  player.hpp
src/engine/: camera.cpp  camera.hpp  flags.cpp  flags.hpp  map.cpp  map.hpp  transition.cpp  transition.hpp
src/engine/effects/: transition.cpp  transition.hpp
src/engine/ui/: box.cpp  box.hpp  confirm_dialog.cpp  confirm_dialog.hpp  listbox.cpp  listbox.hpp  textbox.cpp  textbox.hpp
src/game_objects/: building.cpp  building.hpp  game_object_interface.hpp  gate_statue.cpp  gate_statue.hpp  stargate.cpp  stargate.hpp
src/game_objects/template/: game_object.cpp  game_object.hpp
src/handlers/: entry_handler.cpp  entry_handler.hpp  game_objects.cpp  game_objects.hpp  stargate_handler.cpp  stargate_handler.hpp
src/items/: gate_part.cpp  gate_part.hpp  items.cpp  items.hpp
src/items/combat/: arrow.cpp  attack.cpp  dagger.cpp  escape.cpp  fire.cpp  ice.cpp  magic.cpp  shock.cpp  spear.cpp  sword.cpp  sword_heavy.cpp  sword_light.cpp
src/items/gear/: arrow.cpp  dagger.cpp  fire.cpp  ice.cpp  magic.cpp  shock.cpp  spear.cpp  sword.cpp
src/items/generic/: options_entry.cpp
src/items/inventory/: apple.cpp  carrot.cpp  carrot_seed.cpp  gate_part.cpp
src/items/menu/: exit.cpp  load_entry.cpp  new_save_entry.cpp  save_entry.cpp  settings_entry.cpp  show_fps_entry.cpp
src/items/options/: exit_options_entry.cpp  options_back_entry.cpp  reset_all_entries.cpp  reset_all_entry.cpp  reset_save_entry.cpp  show_fps_entry.cpp  show_time_entry.cpp
src/items/settings/: exit_settings_entry.cpp
src/items/shop/: apple.cpp  arrow.cpp  carrot.cpp  carrot_seed.cpp  dagger.cpp  spear.cpp  sword.cpp
src/items/sidemenu/: exit_entry.cpp  exit_sidemenu_entry.cpp  gear_entry.cpp  inventory.cpp  inventory_entry.cpp  quit_entry.cpp  save_entry.cpp  sidemenu_back_entry.cpp
src/map/: map.cpp  map.hpp  map_flags.cpp  map_flags.hpp  map_handler.cpp  map_handler.hpp  map_segment.cpp  map_segment.hpp
src/map_objects/: building.hpp  stargate.cpp  stargate.hpp
src/scenes/: game_scene.cpp  game_scene.hpp  menu_scene.cpp  menu_scene.hpp  options_scene.cpp  options_scene.hpp  scene_interface.hpp  settings_scene.cpp  settings_scene.hpp
src/scenes/combat/: combat_scene.cpp  combat_scene.hpp
src/scenes/combat/characters/: enemy.cpp  enemy.hpp  player.cpp  player.hpp
src/scenes/combat/characters/template/: character.cpp  character.hpp
src/scenes/combat/handlers/: character_handler.cpp  character_handler.hpp
src/scenes/combat/ui/: attack_menu.cpp  attack_menu.hpp  combat_menu.cpp  combat_menu.hpp  combat_stats.cpp  combat_stats.hpp  stats.cpp  stats.hpp
src/scenes/game/: game_scene.cpp  game_scene.hpp  player.cpp  player.hpp  utils.cpp  utils.hpp
src/scenes/game/characters/: player.cpp  player.hpp
src/scenes/game/characters/template/: character.cpp  character.hpp
src/scenes/game/game_objects/: carrot_bed.cpp  carrot_bed.hpp  fruit_tree.cpp  fruit_tree.hpp  gate_statue.cpp  gate_statue.hpp  player.cpp  player.hpp  sign.cpp  sign.hpp  stargate.cpp  stargate.hpp
src/scenes/game/game_objects/characters/: enemy.cpp  enemy.hpp  gear_villager.cpp  gear_villager.hpp  nurse.cpp  nurse.hpp  salesman.cpp  salesman.hpp  story_character.cpp  story_character.hpp  villager.cpp  villager.hpp
src/scenes/game/game_objects/handler/: game_object_handler.cpp  game_object_handler.hpp  player_handler.cpp  player_handler.hpp  save_game_objects.cpp  save_game_objects.hpp
src/scenes/game/game_objects/objects/: carrot_bed.cpp  carrot_bed.hpp  chest.cpp  chest.hpp  crystal.cpp  crystal.hpp  dungeon_door.cpp  dungeon_door.hpp  fruit_tree.cpp  fruit_tree.hpp  gate_statue.cpp  gate_statue.hpp  lever.cpp  lever.hpp  sign.cpp  sign.hpp  stargate.cpp  stargate.hpp
src/scenes/game/game_objects/template/: game_object.cpp  (+1 more)
src/scenes/game/handlers/: entry_handler.cpp  entry_handler.hpp  game_objects.cpp  game_objects.hpp  sidemenu_handler.cpp  sidemenu_handler.hpp  stargate_handler.cpp  stargate_handler.hpp
src/scenes/game/ui/: inventory.cpp  inventory.hpp  notification.cpp  notification.hpp  overlay.cpp  overlay.hpp  sidemenu.cpp  sidemenu.hpp
src/scenes/game/utils/: entry_handler.cpp  entry_handler.hpp  utils.cpp  utils.hpp
src/scenes/gameover/: gameover_scene.cpp  gameover_scene.hpp
src/scenes/menu/: menu_scene.cpp  menu_scene.hpp
src/scenes/options/: options_scene.cpp  options_scene.hpp
src/ui/: box.hpp  inventory.cpp  inventory.hpp  listbox.cpp  listbox.hpp  overlay.cpp  overlay.hpp  sidemenu.cpp  sidemenu.hpp  textbox.cpp  textbox.hpp
src/ui/controls/: box.cpp  box.hpp  listbox.cpp  listbox.hpp  textbox.cpp  textbox.hpp
src/utils/: camera.cpp  camera.hpp  entry_registry.cpp  entry_registry.hpp  game_time.cpp  game_time.hpp  map.cpp  map.hpp  movement_direction.cpp  movement_direction.hpp  savegame.cpp  savegame.hpp  transition.hpp  types.hpp  ui_overlay.cpp  ui_overlay.hpp  utils.cpp  utils.hpp
src/utils/saves/: options.cpp  options.hpp  save_types.hpp  savegame.cpp  savegame.hpp
src/utils/saves/converter/: legacy_game_structs.hpp  legacy_option_structs.hpp  save_converter.cpp  save_converter.hpp
(+41 files in other folders)
